--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ span.psw {
                 <li><a href="#"> Researchers</a></li>
                 <li><a href="#">Projects</a></li>
                 <li><a href="#">Resources</a></li>
-                <li><a href="#">Contact us</a></li>
+                <li><a href="#">Contact</a></li>
                 <li><a class="active" onclick="document.getElementById('id01').style.display='block'" style="width:auto; border-radius: 5px; cursor: pointer;">Login</a></li>
             </ul>
         </nav>
